OR-24 : get subtype
